--- a/src/components/Summary/summary.scss
+++ b/src/components/Summary/summary.scss
@@ -12,6 +12,11 @@
       cursor: pointer;
     }
     
+    &__icon {
+      width: 12px;
+      margin-right: 5px;
+    }
+    
     &__title {
       font-weight: bold;
     }
