--- a/src/components/Loading/loading.scss
+++ b/src/components/Loading/loading.scss
@@ -1,13 +1,10 @@
+@import "../../animations.scss";
+
 .loading {
   border: 4px solid #1d1d1d;
-  border-top: 4px solid #23B0AA;
+  border-top: 4px solid #23b0aa;
   border-radius: 50%;
   width: 30px;
   height: 30px;
   animation: spin 2s linear infinite;
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
 }
