--- a/src/components/Result/results.scss
+++ b/src/components/Result/results.scss
@@ -1,3 +1,5 @@
+@import "../../animations.scss";
+
 .result {
   display: flex;
   flex-direction: column;
@@ -60,15 +62,4 @@
     }
   }
 
-}
-
-@keyframes fade-up {
-  0% {
-    transform: translateY(100%);
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(0);
-    opacity: 1;
-  }
 }
