--- a/src/components/SearchSelect/search-select.scss
+++ b/src/components/SearchSelect/search-select.scss
@@ -1,3 +1,5 @@
+@import "../../animations.scss";
+
 .search-select {
   animation: fade-up 0.3s ease;
   padding: 15px;
@@ -79,13 +81,4 @@
   }
 }
 
-@keyframes fade-up {
-  0% {
-    transform: translateY(100%);
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
+
